UPDATE: Added license check

--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,16 +1,23 @@
 name: Acquire activation file
-on:
-  workflow_dispatch: {}
+
+on: workflow_dispatch
+
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE}}
+
 jobs:
   activation:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
-      # Request manual activation file
+      - name: Check for Unity License
+        if: ${{ !startWith(env.UNITY_LICENSE, '<')}}
+        run: exit 1
+
       - name: Request manual activation file
         id: getManualLicenseFile
         uses: game-ci/unity-request-activation-file@v2
-      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+
       - name: Expose as artifact
         uses: actions/upload-artifact@v2
         with:
