UPDATE: Changed trigger branch to develop instead of main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: GameCI Template 🎮
 on: 
   push:
     branches:
-      - main
+      - develop
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
