ADD: Release workflow after merge to develop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -190,3 +190,12 @@ jobs:
         with:
           branch: build-windows-64
           folder: build/StandaloneWindows64
+          
+  releaseDraft:
+    needs: buildWindows
+    name: Release Draft Notes 📝
+    runs-on: ubuntu-latest
+    steps:
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
