--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 name: Build for QA 🎮
 
 on: 
+  workflow_dispatch:
   push:
     branches:
       - develop
     paths-ignore:
       - '.github/**'
-  workflow_dispatch
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
