--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,13 +196,12 @@ jobs:
           MESSAGE: "Build: ({sha}) {msg}"
           
   release:
+    needs: [buildWebGL, buildWindows]
     name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
@@ -211,7 +210,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
