UPDATE: Changed build dependency to deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,7 +196,7 @@ jobs:
           MESSAGE: "Build: ({sha}) {msg}"
           
   release:
-    needs: [buildWebGL, buildWindows]
+    needs: [deployWebGL, deployWindows]
     name: Release
     runs-on: ubuntu-latest
     steps:
