UPDATE: Added release-config file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -220,5 +220,7 @@ jobs:
       #   run: npx semantic-release
       
         - uses: release-drafter/release-drafter@v5
+          with:
+            config-name: release-config.yml
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
