--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -221,6 +221,6 @@ jobs:
       
         - uses: release-drafter/release-drafter@v5.15.0
           with:
-            config-name: release-config.yml
+            config-name: release-drafter.yml
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
