--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -200,8 +200,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+
       #   with:
       #     ref:
 
@@ -218,7 +217,9 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       #   run: npx semantic-release
-      
+        - name: Checkout
+          uses: actions/checkout@v2
+          
         - uses: release-drafter/release-drafter@v5.15.0
           with:
             config-name: release-drafter.yml
