--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,29 +1,36 @@
-name-template: 'v$RESOLVED_VERSION ✨'
+name-template: 'v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
+template: |
+  # What's Changed
+  $CHANGES
 categories:
-  - title: '🚀 What's new'
-    labels:
-      - 'major'
-  - title: '🔧 Changes'
-    labels:
-      - 'minor'
-  - title: '🐞 Bug Fixes'
-    labels:
-      - 'patch'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
-change-title-escapes: '\<*_&@'
+  - title: 'Breaking'
+    label: 'type: breaking'
+  - title: 'New'
+    label: 'type: feature'
+  - title: 'Bug Fixes'
+    label: 'type: bug'
+  - title: 'Maintenance'
+    label: 'type: maintenance'
+  - title: 'Documentation'
+    label: 'type: docs'
+  - title: 'Dependency Updates'
+    label: 'type: dependencies'
+
 version-resolver:
   major:
     labels:
-      - 'major'
+      - 'type: breaking'
   minor:
     labels:
-      - 'minor'
+      - 'type: feature'
   patch:
     labels:
-      - 'patch'
-  default: patch
-template: |
-  ## Changes
+      - 'type: bug'
+      - 'type: maintenance'
+      - 'type: docs'
+      - 'type: dependencies'
+      - 'type: security'
 
-  $CHANGES
+exclude-labels:
+  - 'skip-changelog'
