--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,33 +4,23 @@ template: |
   # What's Changed
   $CHANGES
 categories:
-  - title: 'Breaking'
-    label: 'type: breaking'
-  - title: 'New'
-    label: 'type: feature'
-  - title: 'Bug Fixes'
-    label: 'type: bug'
-  - title: 'Maintenance'
-    label: 'type: maintenance'
-  - title: 'Documentation'
-    label: 'type: docs'
-  - title: 'Dependency Updates'
-    label: 'type: dependencies'
+  - title: '🚀 What's new'
+    labels: 'major'
+  - title: '🔧 Changes'
+    labels: 'minor'
+  - title: '🐞 Bug Fixes'
+    labels: 'patch'
 
 version-resolver:
   major:
     labels:
-      - 'type: breaking'
+      - 'major'
   minor:
     labels:
-      - 'type: feature'
+      - 'minor'
   patch:
     labels:
-      - 'type: bug'
-      - 'type: maintenance'
-      - 'type: docs'
-      - 'type: dependencies'
-      - 'type: security'
+      - 'patch'
 
 exclude-labels:
   - 'skip-changelog'
