FIX: Typo for 'labels' in categories

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -5,11 +5,11 @@ template: |
   $CHANGES
 categories:
   - title: '🚀 What's new'
-    labels: 'major'
+    label: 'major'
   - title: '🔧 Changes'
-    labels: 'minor'
+    label: 'minor'
   - title: '🐞 Bug Fixes'
-    labels: 'patch'
+    label: 'patch'
 
 version-resolver:
   major:
