FIX: Realized there are 3 apostrophes in 1 line

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,7 +4,7 @@ template: |
   # What's Changed
   $CHANGES
 categories:
-  - title: '🚀 What's new'
+  - title: '🚀 New features'
     label: 'major'
   - title: '🔧 Changes'
     label: 'minor'
