--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,9 +205,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.release-draft.outputs.upload_url }}
+          upload_url: ${{ jobs.releaseDraft.outputs.upload_url }}
           asset_path: ./build.zip
-          asset_name: Apawllo-${{ steps.release-draft.outputs.tag_name }}.zip
+          asset_name: Apawllo-${{ jobs.releaseDraft.outputs.tag_name }}.zip
           asset_content_type: application/zip
           
   releaseDraft:
@@ -218,6 +218,9 @@ jobs:
         id: release-draft
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    outputs:
+      tag_name: ${{ steps.release-draft.outputs.tag_name }}
+      upload_url: ${{ steps.release-draft.outputs.upload_url }}
           
   publishRelease:
     needs: [deployWindows, deployWebGL, releaseDraft]
