UPDATE: Workflow dependencies for publishing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -229,7 +229,7 @@ jobs:
           asset_content_type: application/zip
           
   publishRelease:
-    needs: [deployWindows, deployWebGL, releaseDraft]
+    needs: [deployWebGL, uploadBuild, releaseDraft]
     name: Publish Release
     runs-on: ubuntu-latest
     steps:
