--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -203,7 +203,7 @@ jobs:
         run: echo "::set-output name=upload_url::${{ steps.release-draft.outputs.tag_name }}"
   
   uploadBuild:
-    needs: releaseDraft
+    needs: [releaseDraft, buildWindows]
     name: Upload Windows x64 Build to Release
     runs-on: ubuntu-latest
     steps:
