--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -189,8 +189,9 @@ jobs:
     name: Release Draft
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.release-draft.outputs.upload_url }}
-      tag_name: ${{ steps.release-draft.outputs.tag_name }}
+      upload_url: ${{ steps.output_upload_url.outputs.upload_url }}
+      tag_name: ${{ steps.output_tag_name.outputs.tag_name }}
+      release_id: ${{ steps.output_release_id.outputs.release_id }}
     steps:
       - name: Draft a Release
         uses: release-drafter/release-drafter@master
@@ -201,6 +202,8 @@ jobs:
         run: echo "::set-output name=upload_url::${{ steps.release-draft.outputs.upload_url }}"
       - id: output_tag_name
         run: echo "::set-output name=upload_url::${{ steps.release-draft.outputs.tag_name }}"
+      - id: output_release_id
+        run: echo "::set-output name=upload_url::${{ steps.release-draft.outputs.id }}"
   
   uploadBuild:
     needs: [releaseDraft, buildWindows]
