--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -237,7 +237,7 @@ jobs:
           asset_content_type: application/zip
           
   publishRelease:
-    needs: uploadBuild
+    needs: [releaseDraft, uploadBuild]
     name: Publish Release
     runs-on: ubuntu-latest
     steps:
@@ -245,4 +245,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release_id: ${{ steps.release-draft.outputs.id }}
+          release_id: ${{ needs.releaseDraft.outputs.release_id }}
