UPDATE: Trying a maybe more efficient workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -185,7 +185,7 @@ jobs:
           folder: build/WebGL
           
   releaseDraft:
-    needs: testRunner
+    needs: buildWindows
     name: Release Draft
     runs-on: ubuntu-latest
     outputs:
