UPDATE: Swapped releaseDraft and buildWindows
Release Draft needs to be done before Windows Build so we can peruse it asap

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,7 @@ jobs:
           path: build/WebGL
 
   buildWindows:
-    needs: testRunner
+    needs: releaseDraft
     name: Build Windows x64 🖥️
     runs-on: ubuntu-latest
     steps:
@@ -185,7 +185,7 @@ jobs:
           folder: build/WebGL
           
   releaseDraft:
-    needs: buildWindows
+    needs: testRunner
     name: Release Draft
     runs-on: ubuntu-latest
     outputs:
