--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,7 +3,7 @@ tag-template: 'v$RESOLVED_VERSION'
 template: |
   # What's Changed
   $CHANGES
-  ## QA Testing
+  # QA Testing
   * WebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/).
   * Windows build can be downloaded below.
 
