--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -5,7 +5,7 @@ template: |
   $CHANGES
   # QA Testing
   * WebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/).
-  * Windows build can be downloaded below.
+  * Windows build can be downloaded as .zip below.
 
 categories:
   - title: '⚡ Breaking'
