UPDATE: Added Discord notification

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -246,3 +246,35 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           release_id: ${{ needs.releaseDraft.outputs.release_id }}
+  
+  notifyDiscord:
+    needs: publishRelease
+    name: Notify on Discord 📢
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify Success
+        if: ${{ success() }}
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          discord-webhook: ${{ secrets.WEBHOOK_URL }}
+          username: '${{ github.workflow }}'
+          avatar-url: 'https://media.discordapp.net/attachments/857447804977152000/894758305690452039/success_kid.png'
+          title: 'New build status: {{STATUS}}!'
+          description: 'Status of build phases'
+          include-details: 'true'
+          color-success: '#2eb886'
+          
+      - name: Notify Failure
+        if: ${{ failure() }}
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          discord-webhook: ${{ secrets.WEBHOOK_URL }}
+          username: '${{ github.workflow }}'
+          avatar-url: 'https://media.discordapp.net/attachments/857447804977152000/894760486439125042/explosion.png'
+          title: 'New build status: {{STATUS}} . . .'
+          description: 'Status of build phases'
+          include-details: 'true'
+          color-failure: '#a30200'
+        
