--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -264,7 +264,7 @@ jobs:
           username: '${{ github.workflow }}'
           avatar-url: 'https://media.discordapp.net/attachments/857447804977152000/894758305690452039/success_kid.png'
           title: 'New build status (${{ needs.releaseDraft.outputs.tag_name }}): SUCCESS!'
-          description: 'Release notes can be viewed [here](${{ needs.releaseDraft.outputs.html_url }})\nWebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/)'
+          description: 'Release notes: ${{ needs.releaseDraft.outputs.html_url }} \n WebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/)'
           include-details: 'false'
           color-success: '#2eb886'
           
