--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
     name: Build WebGL 🌐
     runs-on: ubuntu-latest
     steps:
+      - run: exit 1
       - name: Checkout repo
         uses: actions/checkout@v2
 
