--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -259,6 +259,7 @@ jobs:
           description: | 
             Release notes can be viewed [here](https://github.com/ShiroKatake/apawllo-remake/releases/tag/${{ needs.releaseDraft.outputs.tag_name }})
             WebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/)
+            Windows x64 build can be downloaded [here](https://github.com/ShiroKatake/apawllo-remake/releases/download/${{ needs.releaseDraft.outputs.tag_name }}/Apawllo-${{ needs.releaseDraft.outputs.tag_name }}.zip)
           include-details: 'false'
           color-success: '#2eb886'
           
