--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -257,9 +257,9 @@ jobs:
           avatar-url: 'https://media.discordapp.net/attachments/857447804977152000/894758305690452039/success_kid.png'
           title: 'New build status (${{ needs.releaseDraft.outputs.tag_name }}): SUCCESS!'
           description: | 
-            Release notes can be viewed [here](https://github.com/ShiroKatake/apawllo-remake/releases/tag/${{ needs.releaseDraft.outputs.tag_name }})
-            WebGL build can be played [here](https://shirokatake.github.io/apawllo-remake/)
-            Windows x64 build can be downloaded [here](https://github.com/ShiroKatake/apawllo-remake/releases/download/${{ needs.releaseDraft.outputs.tag_name }}/Apawllo-${{ needs.releaseDraft.outputs.tag_name }}.zip)
+            📝 View [Release Notes](https://github.com/ShiroKatake/apawllo-remake/releases/tag/${{ needs.releaseDraft.outputs.tag_name }})
+            🌐 Play [WebGL build](https://shirokatake.github.io/apawllo-remake/)
+            🖥️ Download [Win x64 build](https://github.com/ShiroKatake/apawllo-remake/releases/download/${{ needs.releaseDraft.outputs.tag_name }}/Apawllo-${{ needs.releaseDraft.outputs.tag_name }}.zip)
           include-details: 'false'
           color-success: '#2eb886'
           
