TEST: Fail message

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           - EditMode
           - PlayMode
     steps:
+      - run: exit 1
       - name: Checkout repo
         uses: actions/checkout@v2
 
